# tax_workbrench

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
agents/: __init__.py  deep_agent.py  prompt.py  tools.py
agents/general/: __init__.py  graph.py  prompt.py
agents/intake/: __init__.py  extraction.py  graph.py  log_formatter.py  prompt.py
agents/supervisor/: __init__.py  graph.py  prompt.py
app/: chat.py  container.py  main.py  settings.yaml
app/routes/: conversations.py
apps/tax-agent/: settings.yaml
apps/tax-agent/app/: graph.py  main.py
apps/tax-agent/app/configuration/: __init__.py
apps/tax-agent/app/routes/: conversations.py
docs/: PRD.md
libs/db/: base_document.py  connection.py  database_service.py
libs/db/repositories/: conversations.py  facts.py
libs/extraction/: __init__.py  log_formatter.py  schema.py  service.py
libs/graph_runtime/: __init__.py  conversation_runner.py  conversation_service.py  model_factory.py
libs/models/: conversation.py
libs/models/facts/: __init__.py  base.py  california.py  deductions.py  income.py  payments.py  property.py  registry.py  taxpayer.py
src/tax_workbench/: config.py
src/tax_workbench/db/: base_document.py  connection.py  database_service.py
src/tax_workbench/db/repositories/: conversations.py
src/tax_workbench/lib/graph_runtime/: __init__.py  conversation_runner.py  conversation_service.py  (+2 more)
src/tax_workbench/models/: conversation.py
tests/: test_accumulation.py  test_deep_agent.py  test_extraction.py  test_extraction_edge_cases.py  test_extraction_full.py
