[project]
name = "tax-workbench"
version = "0.1.0"
description = "Agentic tax planning workspace for U.S. individual tax scenarios"
requires-python = ">=3.12,<3.14"
dependencies = [
    # LangGraph / LangChain
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-aws>=0.2",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",

    # Database
    "motor>=3.6",
    "pymongo>=4.9",

    # HTTP client
    "httpx>=0.27",

    # DI
    "injector>=0.21",

    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Chat UI
    "chainlit>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs", "agents", "app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
